--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,79 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.background {
+    background-color: #1c5380;
+    width: 100vw;
+    height: 35%;
+    position: absolute;
+    z-index: -1;
+    
+}
+
+section {
+    width: 80%;
+    padding: 5%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.container {
+    width: 50%;
+    flex-direction: column;
+}
+
+.container header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container header button {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 110px;
+    background-color: #1c5380;
+    color: white;
+    font-size: smaller;
+    font-weight: bold;
+    border-radius: 5%;
+}
+
+.text {
+    background-color: aliceblue;
+    padding: 5%;
+    margin-top: 20px;
+    border-radius: 2%;
+    box-shadow: 0px 2px 10px 5px rgba(80, 79, 79, 0.247);
+}
+
+.text h2 {
+    color: #06365f;
+    font-size: 1.8em;
+    margin-top: 0px;
+}
+
+.badge img {
+    margin-top: 10px;
+    margin-right: 20px;
+}
+
+footer ul {
+    margin: auto;
+    width: 80%; 
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+    font-weight: 650;
+    color: #06365f;
+}
+  
+ul .instagram {
+    color: grey;
 }
